// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ElementAccessExpressionCompiler [0, 1, 2]["idx"] 1`] = `
"snippetCode.ts (3,9): Element implicitly has an 'any' type because index expression is not of type 'number'.

      1 | 
      2 |       const x = [0, 1, 2]
    > 3 |       x['0'];
        |         ^
      4 |       const length: string = 'length' as string;
      5 |       x[length];
      6 |     
"
`;

exports[`ElementAccessExpressionCompiler Buffer.from([0, 1, 2])["idx"] 1`] = `
"snippetCode.ts (3,9): Element implicitly has an 'any' type because index expression is not of type 'number'.

      1 | 
      2 |       const x = Buffer.from('000102', 'hex');
    > 3 |       x['0'];
        |         ^
      4 |       const length: string = 'length' as string;
      5 |       x[length];
      6 |     
"
`;

exports[`ElementAccessExpressionCompiler Object["keys"] 1`] = `
"snippetCode.ts (4,7): Cannot find name 'assertEqual'.

      2 |       const x = Object['keys'];
      3 | 
    > 4 |       assertEqual(x !== undefined, true);
        |       ^
      5 |     
"
`;
